--- a/calculator.html
+++ b/calculator.html
@@ -5,6 +5,10 @@ function cube() {
 var num = document.getElementById("n1");
 num.value = Math.pow(num.value, 3);
 }
+function quad() {
+var num = document.getElementById("n1");
+num.value = Math.pow(num.value, 4);
+}
 
 </script>
 </head>
@@ -14,6 +18,7 @@ Number:
 <input type="text" id="n1">
 <p>
 <button onclick="cube()"> x^3 </button>
+<button onclick="quad()"> x^4 </button>
 
 </p>
 </body>
