--- a/calculator.html
+++ b/calculator.html
@@ -13,6 +13,10 @@ function quad() {
 var num = document.getElementById("n1");
 num.value = Math.pow(num.value, 4);
 }
+function cuad() {
+var num = document.getElementById("n1");
+num.value = Math.pow(num.value, 2);
+}
 </script>
 </head>
 <body>
@@ -23,7 +27,7 @@ Number:
 <button onclick="cube()"> x^3 </button>
 <button onclick="sin()"> sine </button>
 <button onclick="quad()"> x^4 </button>
-
+<button onclick="cuad()"> x^2 </button>
 </p>
 </body>
 </html>
