--- a/calculator.html
+++ b/calculator.html
@@ -17,6 +17,10 @@ function cuad() {
 var num = document.getElementById("n1");
 num.value = Math.pow(num.value, 2);
 }
+function inv() {
+var num = document.getElementById("n1");
+num.value = 1/num.value;
+}
 </script>
 </head>
 <body>
@@ -28,6 +32,7 @@ Number:
 <button onclick="sin()"> sine </button>
 <button onclick="quad()"> x^4 </button>
 <button onclick="cuad()"> x^2 </button>
+<button onclick="inv()"> 1/x </button>
 </p>
 </body>
 </html>
